feat: chart attachments
